<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:orientation="vertical">

    <Button
        android:id="@+id/notes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_edit_hint" />

    <Button
        android:id="@+id/quiz_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_button_text" />

    <Button
        android:id="@+id/background_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="hello" />
    <Button
        android:id="@+id/dice_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dice_roller_button_text"/>
</LinearLayout>